--- a/tests/src/requirements.txt
+++ b/tests/src/requirements.txt
@@ -1,10 +1,8 @@
-
-PyYAML
-pytest
+--pre
 
 cloudshell-logging==1.0.3
 cloudshell-orch-core>=3.3.0.0,<3.4.0.0
 cloudshell-shell-core>=5.0.3,<6.0.0
 cloudshell-traffic>3.2,<=3.3
-cloudshell-rest-api>=8.2.3.1
-shellfoundry
+
+pylgi>0.6,<=0.7
