--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,9 +7,8 @@ repos:
     hooks:
       - id: isort
         language_version: python3.7
-        args: [--line-length=127]
   - repo: https://github.com/python/black
-    rev: 21.12b0
+    rev: 22.3.0
     hooks:
       - id: black
         language_version: python3.7
@@ -27,10 +26,7 @@ repos:
           flake8-eradicate,
         ]
         language_version: python3.7
-        args: [
-          --max-line-length=127,
-          '--ignore=A002,A003,D100,D101,D102,D103,D104,D105,D106,D107,D200,D210,D401,E203,W503'
-        ]
+        args: ['--ignore=A002,A003,D100,D101,D102,D103,D104,D105,D106,D107,D200,D210,D401,E203,W503']
   # See https://stackoverflow.com/questions/61238318/pylint-and-pre-commit-hook-unable-to-import/61238571#61238571
   - repo: local
     hooks:
@@ -40,11 +36,11 @@ repos:
         language: system
         types: [python]
         args: [
-          --max-line-length=127,
-          --max-public-methods=40,
-          --max-statements=80,
-          --max-args=8,
-          '--disable=too-few-public-methods,logging-fstring-interpolation,too-many-instance-attributes,no-else-return,too-many-locals,no-self-use,duplicate-code,broad-except,logging-not-lazy,unspecified-encoding',
+            --max-line-length=127,
+            --max-public-methods=40,
+            --max-statements=80,
+            --max-args=8,
+            '--disable=logging-not-lazy,unspecified-encoding',
         ]
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.930
