fix Makefile and pre-commit

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,5 @@
 [isort]
 profile = black
-line_length=127
-
-[flake8]
-max_line_length=127
 
 [mypy]
 ignore_missing_imports = True
@@ -11,7 +7,9 @@ exclude =
     shellfoundry_traffic/cloudshell_scripts_helpers.py
     tests/script/src/*
     tests/shell/src/*
-allow_untyped_calls = False
+allow_untyped_calls = True
 allow_untyped_defs = False
 allow_incomplete_defs = False
 follow_imports = skip
+no_strict_optional = True
+show_error_codes = True
