--- a/tests/shell/shell-definition-standard.yaml
+++ b/tests/shell/shell-definition-standard.yaml
@@ -2,21 +2,20 @@ description: TOSCA based Test shell
 
 tosca_definitions_version: tosca_simple_yaml_1_0
 
+imports:
+  - cloudshell_standard: cloudshell_traffic_generator_controller_standard_2_0_0.yaml
+
 metadata:
-  template_name: Shell_Foundry_Telco_Test
+  template_name: Shell_Foundry_Traffic_Get_Test
   template_author: yoram@ignissoft.com
   template_version: 0.1.0
   template_icon: shell-icon.png
   traffic:
     main_class: shellfoundry_test_driver.ShellFoundry1Driver
 
-imports:
-  - cloudshell_standard: cloudshell_telco_standard_1_0_0.yaml
-
 node_types:
-
-  vendor.resource.Shell_Foundry_Telco_Test:
-    derived_from: cloudshell.telco.nodes.CMTS
+  vendor.resource.Shell_Foundry_Traffic_Get_Test:
+    derived_from: cloudshell.nodes.TrafficGeneratorController
     artifacts:
       icon:
         file: shell-icon.png
