--- a/.github/workflows/python-push.yml
+++ b/.github/workflows/python-push.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install pip -U
-          pip install -r requirements-ci.txt
+          pip install -r requirements.txt
       - name: Run pre-commit
         run: |
           pre-commit install
-          pre-commit run --files cloudshell/traffic/*
+          pre-commit run --all
